# stringer

./: Cargo.toml  README.md
benches/: bench.rs
src/: lib.rs  snakecase.rs
